lubuntu-default-settings (0.20) UNRELEASED; urgency=low

  * etc/xdg/lubuntu/menus/lxde-applications.menu:
   - Avoid Audio, Video and AudioVideo applications appearing
     in the Accessories menu (duplicating Sound & Video entries).
   - Avoid applications in both System and Utility categories
     appearing in the Accessories menu (duplicating System Tools
     entries). (LP: #779818)

 -- Jonathan Marsden <jmarsden@fastmail.fm>  Sun, 22 May 2011 19:05:48 -0700

lubuntu-default-settings (0.19) natty; urgency=low

  * etc/xdg/lubuntu/applications/default.list:
    - Set Chromium as the default handler for http/https
    - Use libreoffice instead of ooo2
    - Set apturl as the default handler for apturl

 -- Julien Lavergne <gilir@ubuntu.com>  Mon, 25 Apr 2011 21:11:38 +0200

lubuntu-default-settings (0.18) natty; urgency=low

  * etc/xdg/lubuntu/menus/lxde-applications.menu:
   - Set name of the menu to Applications, to fix libfm-pref-apps.

 -- Julien Lavergne <gilir@ubuntu.com>  Thu, 17 Mar 2011 18:59:59 +0100

lubuntu-default-settings (0.17) natty; urgency=low

  [ Julien Lavergne ]
  * etc/xdg/lubuntu/menus/lxde-applications.menu:
   - Add a specific menu structure for lubuntu session.
  * etc/xdg/lubuntu/lxdm/lxdm.conf
   - Remove background option, it's already defined by the theme, and can break
     it sometimes (LP: #703658).

  [ Jonathan Marsden ]
  * etc/xdg/lubuntu/menus/lxde-applications.menu:
   - Update DTD to use standards.freedesktop.org
   - Move system-wide admin tools to System -> Administration menu
     (LP: #650432)

 -- Julien Lavergne <gilir@ubuntu.com>  Mon, 21 Feb 2011 01:51:14 +0100

lubuntu-default-settings (0.16) natty; urgency=low

  * usr/bin
   - Sync XDG_DATA_DIRS with lxde-common
  * usr/share/lubuntu/openbox/rc.xml:
   - Remove some unused code.
  * debian/control
   - Recommends amixer, scrot and galculator for some openbox keybindings.
  * etc/xdg/pcmanfm/lubuntu.conf